--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-
   * {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
   :root {
     --background: 0 0% 100%;
@@ -34,7 +33,6 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-
   }
 
   .dark {
@@ -62,13 +60,6 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-
-  }
-
-
-@layer base {
-  * {
-    @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
@@ -81,7 +72,6 @@
   }
   .btn-anim {
     @apply transition active:scale-75;
-
   }
   body {
     @apply bg-background text-foreground;
